fix: sometimes double scroll bars are visible after list animation

--- a/src/app/home/ui/nav/nav.component.scss
+++ b/src/app/home/ui/nav/nav.component.scss
@@ -19,4 +19,5 @@
 .tab-content {
   display: block;
   margin-top: var(--tab-bar-height);
+  overflow: hidden;
 }
